Добавление тестов для 4 задачи